--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -42,7 +42,7 @@
                     android:layout_toEndOf="@+id/img_back"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="Dhaka, Gulshan"
+                    android:text="Select Rooms"
                     android:textColor="@color/black_overlay" />
 
                 <LinearLayout
@@ -54,7 +54,8 @@
                     android:background="?selectableItemBackground"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="5dp">
+                    android:padding="5dp"
+                    android:visibility="invisible">
 
                     <ImageView
                         android:layout_width="24dp"
@@ -79,7 +80,8 @@
                     android:background="?selectableItemBackground"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="5dp">
+                    android:padding="5dp"
+                    android:visibility="invisible">
 
                     <ImageView
                         android:layout_width="24dp"
@@ -132,95 +134,6 @@
             android:layout_height="0.5dp"
             android:background="@android:color/black" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/start_date_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Start Date"
-                    android:textColor="@android:color/holo_red_dark" />
-
-                <TextView
-                    android:id="@+id/tv_start_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1 September"
-                    android:textColor="@color/black_overlay" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/black" />
-
-            <LinearLayout
-                android:id="@+id/end_date_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="End Date"
-                    android:textColor="@android:color/holo_red_dark" />
-
-                <TextView
-                    android:id="@+id/tv_end_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5 September"
-                    android:textColor="@color/black_overlay" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/black" />
-
-            <LinearLayout
-                android:id="@+id/room_guest_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_room_qty"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1 Room"
-                    android:textColor="@android:color/holo_red_dark" />
-
-                <TextView
-                    android:id="@+id/tv_adult_qty"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1 Adult"
-                    android:textColor="@color/black_overlay" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
@@ -229,113 +142,10 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <FrameLayout
-            android:id="@+id/room_list_layout"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_rooms"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_rooms"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </FrameLayout>
-
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
-
-        <RelativeLayout
-            android:id="@+id/room_item_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@android:color/white"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/room_image"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="3dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/dummy_image2" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/room_image"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:includeFontPadding="false"
-                    android:maxLines="1"
-                    android:text="OYO 18832 Sateja Tourist Home Saver"
-                    android:textColor="#242529" />
-
-                <TextView
-                    android:id="@+id/tv_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/title"
-                    android:layout_marginTop="@dimen/margin_2"
-                    android:ellipsize="end"
-                    android:gravity="bottom"
-                    android:maxLines="1"
-                    android:text="Gulshan, Dhaka"
-                    android:textSize="@dimen/text_size_12" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/holo_green_dark"
-                        android:paddingStart="3dp"
-                        android:paddingEnd="3dp"
-                        android:text="4.5"
-                        android:textColor="@android:color/white"
-                        android:textSize="12sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/darker_gray"
-                        android:paddingStart="3dp"
-                        android:paddingEnd="3dp"
-                        android:text="Excellent"
-                        android:textColor="@android:color/black"
-                        android:textSize="12sp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="16dp"
-                app:srcCompat="@drawable/ic_like_white" />
-
-        </RelativeLayout>
+            android:layout_height="match_parent" />
 
     </RelativeLayout>
 
