--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -63,7 +63,8 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:text="Gulshan, Dhaka"
-                        android:textSize="@dimen/text_size_12" />
+                        android:textSize="@dimen/text_size_12"
+                        android:visibility="invisible" />
 
                     <LinearLayout
                         android:id="@+id/rating_layout"
@@ -271,6 +272,7 @@
                 android:background="#a4a4a4" />
 
             <TextView
+                android:id="@+id/room_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -324,11 +326,13 @@
                     app:layout_constraintTop_toTopOf="@+id/tv_check_in_date">
 
                     <TextView
+                        android:id="@+id/tv_check_in_day"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Monday" />
 
                     <TextView
+                        android:id="@+id/tv_check_in_year"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="December 2019" />
@@ -370,11 +374,13 @@
                     app:layout_constraintTop_toTopOf="@+id/tv_check_out_date">
 
                     <TextView
+                        android:id="@+id/tv_check_out_day"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Wednesday" />
 
                     <TextView
+                        android:id="@+id/tv_check_out_year"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="December 2019" />
@@ -549,7 +555,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="BDT 100"
+                android:text=""
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/text_size_18" />
 
