--- a/app/src/main/res/layout/fragment_mobile_verification.xml
+++ b/app/src/main/res/layout/fragment_mobile_verification.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <ImageView
@@ -11,7 +12,7 @@
         android:layout_marginLeft="@dimen/margin_20"
         android:layout_marginTop="@dimen/margin_30"
         android:background="?selectableItemBackground"
-        android:src="@drawable/ic_chevron_left_black_24dp" />
+        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +25,7 @@
             android:layout_width="@dimen/logo_w_h"
             android:layout_height="@dimen/logo_w_h"
             android:layout_gravity="center_horizontal"
-            android:src="@mipmap/united_icon" />
+            android:src="@drawable/ic_logo" />
 
         <TextView
             android:layout_width="wrap_content"
