--- a/app/src/main/res/layout/signup_fragment_layout.xml
+++ b/app/src/main/res/layout/signup_fragment_layout.xml
@@ -1,133 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:layout_margin="@dimen/margin_16"
-        android:orientation="vertical">
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
-        <com.google.android.material.textfield.TextInputLayout
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/user_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:hint="Full Name"
-                android:inputType="text"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:hint="Email"
-                android:inputType="text"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/n_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:hint="NID No"
-                android:inputType="number"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/ssc_reg_no"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:hint="SSC Reg No"
-                android:inputType="number"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/hsc_reg_no"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:hint="HSC Reg No"
-                android:inputType="number"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btn_sign_up"
-            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_20"
-            android:background="@color/colorAccent"
-            android:text="sign up"
-            android:textColor="@android:color/white" />
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_name_bg"
+            android:hint="Name"
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:singleLine="true"
+            android:inputType="text"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
 
-        <!--<Button-->
-        <!--android:id="@+id/btn_reset_password"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:background="@null"-->
-        <!--android:text="@string/btn_forgot_password"-->
-        <!--android:textAllCaps="false"-->
-        <!--android:textColor="@color/colorAccent" />-->
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_email"
+            android:inputType="textEmailAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_email_bg"
+            android:hint="example@gmail.com"
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
 
-        <!--<Button-->
-        <!--android:id="@+id/sign_in_button"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:background="@null"-->
-        <!--android:text="@string/btn_link_to_login"-->
-        <!--android:textAllCaps="false"-->
-        <!--android:textColor="@color/colorAccent" />-->
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_mobile_no"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_phone_bg"
+            android:hint=""
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:enabled="false"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            android:inputType="phone"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
 
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_home_bg"
+            android:hint="Address"
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
+
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_name_bg"
+            android:hint="Age"
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:inputType="number"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
+
+        <RadioGroup
+            android:id="@+id/radioSex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <RadioButton
+                android:id="@+id/radioMale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Male" />
+
+            <RadioButton
+                android:id="@+id/radioFemale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Female" />
+
+        </RadioGroup>
+
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_home_bg"
+            android:hint="City"
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
+
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_country"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_home_bg"
+            android:hint="Country"
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
+
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_nid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_id_bg"
+            android:hint="NID"
+            android:inputType="number"
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
+
+        <com.ornach.richtext.RichEditText
+            android:id="@+id/edt_date_of_birth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_birthday_bg"
+            android:hint="yyyy-mm-dd"
+            android:imeOptions="actionDone"
+            android:padding="16dp"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/btn_register"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/background_color"
+                android:text="register"
+                android:textSize="12sp" />
+
+        </LinearLayout>
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleInverse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
