--- a/app/src/main/res/layout/fragment_mobile_login.xml
+++ b/app/src/main/res/layout/fragment_mobile_login.xml
@@ -2,13 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin_20">
+    android:layout_margin="@dimen/margin_16"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
         android:layout_marginTop="@dimen/margin_30"
         android:orientation="vertical">
 
@@ -35,27 +34,36 @@
             android:foreground="?selectableItemBackground"
             app:ccp_defaultNameCode="BD" />
 
-        <EditText
+        <com.ornach.richtext.RichEditText
             android:id="@+id/phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_5"
-            android:hint="@string/hint_phone_no"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/edt_phone_bg"
+            android:hint="1xxxxxxxxx"
+            android:imeOptions="actionNext"
+            android:padding="16dp"
+            android:singleLine="true"
             android:inputType="phone"
-            android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/black"
-            android:textColorHint="@color/grey_lite" />
+            android:textSize="12sp"
+            app:rt_backgroundColor="#E4E4E4"
+            app:rt_borderColor="@android:color/transparent"
+            app:rt_borderWidth="1dp"
+            app:rt_radius="45dp" />
 
-        <Button
-            android:id="@+id/btn_send_code"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/margin_10"
-            android:background="@drawable/button_selector"
-            android:text="@string/text_send_code"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white" />
+            <Button
+                android:layout_marginTop="30dp"
+                android:id="@+id/btn_send_code"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/background_color"
+                android:text="Send Code"
+                android:textSize="12sp" />
+
     </LinearLayout>
 
     <ProgressBar
@@ -67,4 +75,5 @@
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="20dp"
         android:visibility="gone" />
+
 </RelativeLayout>
